doc/windows/Delphi/32bit/multi_card/gts.pas


function GT_GetDi(cardNum:SmallInt ;diType : SmallInt; out pValue:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetDiReverseCount(cardNum:SmallInt ;diType : SmallInt; diIndex : SmallInt; out pReverseCount : LongWord; count : SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_SetDiReverseCount(cardNum:SmallInt ;diType : SmallInt; diIndex : SmallInt; var pReverseCount : LongWord; count : SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_GetDiRaw(cardNum:SmallInt ;diType : SmallInt; out pValue:LongInt): SmallInt; stdcall; External GTDLL;

function GT_SetDac(cardNum:SmallInt ;dac : SmallInt;var pValue:SmallInt;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_GetDac(cardNum:SmallInt ;dac : SmallInt;out pValue:SmallInt;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_GetAdc(cardNum:SmallInt ;adc : SmallInt;out pValue:Double;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAdcValue(cardNum:SmallInt ;adc : SmallInt;out pValue:SmallInt;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_SetEncPos(cardNum:SmallInt ;encoder : SmallInt;encPos:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetEncPos(cardNum:SmallInt ;encoder : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetEncPosPre(cardNum:SmallInt ;encoder:SmallInt;out pValue:Double;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetEncVel(cardNum:SmallInt ;encoder : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_SetCaptureMode(cardNum:SmallInt ;encoder : SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureMode(cardNum:SmallInt ;encoder : SmallInt; out pMode : SmallInt; count:SmallInt=1	): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureStatus(cardNum:SmallInt ;encoder : SmallInt; out pStatus : SmallInt; out pValue:LongInt;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_SetCaptureSense(cardNum:SmallInt ;encoder : SmallInt;mode:SmallInt;sense:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_ClearCaptureStatus(cardNum:SmallInt ;encoder : SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetCaptureRepeat(cardNum:SmallInt ;encoder:SmallInt;count:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureRepeatStatus(cardNum:SmallInt ;encoder:SmallInt;out pCount:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureRepeatPos(cardNum:SmallInt ;encoder:SmallInt;out pValue:LongInt;startNum:SmallInt;count:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetCaptureEncoder(cardNum:SmallInt ;trigger:SmallInt;encoder:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureWidth(cardNum:SmallInt ;trigger:SmallInt;out pWidth:SmallInt;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureHomeGpi(cardNum:SmallInt ;trigger:SmallInt;out pHomeSts:SmallInt;out pHomePos:SmallInt;out pGpiSts:SmallInt;out pGpiPos:SmallInt;count:SmallInt=1): SmallInt; stdcall; External GTDLL;

function GT_Reset(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetClock(cardNum:SmallInt ;Out pClock:LongWord;out pLoop:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetClockHighPrecision(cardNum:SmallInt ;Out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_GetSts(cardNum:SmallInt ;axis : SmallInt; out pSts:LongInt; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_ClrSts(cardNum:SmallInt ;axis:SmallInt;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_AxisOn(cardNum:SmallInt ;axis:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_AxisOff(cardNum:SmallInt ;axis:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_Stop(cardNum:SmallInt ;mask:LongInt;stopOption:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetPrfPos(cardNum:SmallInt ;profile : SmallInt;prfPos:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SynchAxisPos(cardNum:SmallInt ;mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_ZeroPos(cardNum:SmallInt ;axis : SmallInt;count : SmallInt=1): SmallInt; stdcall; External GTDLL;

function GT_SetSoftLimit(cardNum:SmallInt ;axis : SmallInt;positive:LongInt;negative:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetSoftLimit(cardNum:SmallInt ;axis : SmallInt;out pPositive:LongInt;out pNegative:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetAxisBand(cardNum:SmallInt ;axis : SmallInt;band:LongInt;time:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetAxisBand(cardNum:SmallInt ;axis : SmallInt; out pBand:LongInt;out pTime:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetBacklash(cardNum:SmallInt ;axis : SmallInt;compValue:LongInt;compChangeValue:Double;compDir:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetBacklash(cardNum:SmallInt ;axis : SmallInt; out pCompValue:LongInt;out pCompChangeValue:Double;out pCompDir:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetLeadScrewComp(cardNum:SmallInt ;axis:SmallInt;n:SmallInt;startPos:LongInt;lenPos:LongInt;out pCompPos:LongInt;out pCompNeg:LongInt): SmallInt; stdcall; External GTDLL;
function GT_EnableLeadScrewComp(cardNum:SmallInt ;axis:SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCompensate(cardNum:SmallInt ;axis:SmallInt;out pPitchError:Double;out pCrossError:Double;out pBacklashError:Double;out pEncPos:Double;out pPrfPos:Double): SmallInt; stdcall; External GTDLL;

function GT_EnableGantry(cardNum:SmallInt ;gantryMaster:SmallInt;gantrySlave:SmallInt;masterKp:Double;slaveKp:Double): SmallInt; stdcall; External GTDLL;
function GT_DisableGantry(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetGantryErrLmt(cardNum:SmallInt ;gantryErrLmt:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetGantryErrLmt(cardNum:SmallInt ;out pGantryErrLmt:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetPrfMode(cardNum:SmallInt ;profile : SmallInt; out pValue:LongInt;count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_GetPrfPos(cardNum:SmallInt ;profile : SmallInt; out pValue:Double; count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetPrfVel(cardNum:SmallInt ;profile : SmallInt; out pValue:Double; count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetPrfAcc(cardNum:SmallInt ;profile : SmallInt; out pValue:Double; count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetPrfMode(cardNum:SmallInt ;profile : SmallInt; out pValue:LongInt;count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_GetAxisPrfPos(cardNum:SmallInt ;axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisPrfVel(cardNum:SmallInt ;axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisPrfAcc(cardNum:SmallInt ;axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisEncPos(cardNum:SmallInt ;axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisEncVel(cardNum:SmallInt ;axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisEncAcc(cardNum:SmallInt ;axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisError(cardNum:SmallInt ;axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_SetLongVar(cardNum:SmallInt ;index:SmallInt;value:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetLongVar(cardNum:SmallInt ;index:SmallInt;out pValue:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetDoubleVar(cardNum:SmallInt ;index:SmallInt;pValue:Double): SmallInt; stdcall; External GTDLL;
function GT_GetDoubleVar(cardNum:SmallInt ;index:SmallInt;out pValue:Double): SmallInt; stdcall; External GTDLL;

function GT_SetControlFilter(cardNum:SmallInt ;control : SmallInt;index:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetControlFilter(cardNum:SmallInt ;control : SmallInt;out pIndex:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetPid(cardNum:SmallInt ;control : SmallInt;index : SmallInt; var pPid:TPid): SmallInt; stdcall; External GTDLL;
function GT_GetPid(cardNum:SmallInt ;control : SmallInt;index : SmallInt; out pPid:TPid): SmallInt; stdcall; External GTDLL;

function GT_SetKvffFilter(cardNum:SmallInt ;control:SmallInt;index:SmallInt;kvffFilterExp:SmallInt;accMax:Double): SmallInt; stdcall; External GTDLL;
function GT_GetKvffFilter(cardNum:SmallInt ;control:SmallInt;index:SmallInt;out pKvffFilterExp:SmallInt;out pAccMax:Double): SmallInt; stdcall; External GTDLL;

function GT_Update(cardNum:SmallInt ;mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetPos(cardNum:SmallInt ;profile : SmallInt;pos:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetPos(cardNum:SmallInt ;profile : SmallInt; out pPos:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_SetVel(cardNum:SmallInt ;profile : SmallInt;vel:Double): SmallInt; stdcall; External GTDLL;
function GT_GetVel(cardNum:SmallInt ;profile : SmallInt; out pVel:Double): SmallInt; stdcall; External GTDLL;

function GT_PrfTrap(cardNum:SmallInt ;profile:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetTrapPrm(cardNum:SmallInt ;profile : SmallInt; var pPrm:TTrapPrm): SmallInt; stdcall; External GTDLL;
function GT_GetTrapPrm(cardNum:SmallInt ;profile : SmallInt; out pPrm:TTrapPrm): SmallInt; stdcall; External GTDLL;

function GT_PrfJog(cardNum:SmallInt ;profile:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetJogPrm(cardNum:SmallInt ;profile : SmallInt; var pPrm:TJogPrm): SmallInt; stdcall; External GTDLL;
function GT_GetJogPrm(cardNum:SmallInt ;profile : SmallInt; out pPrm:TJogPrm): SmallInt; stdcall; External GTDLL;
